--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 
 fastapi
 uvicorn[standard]
+pydantic[email]
 
 # Form表单提交；
 python-multipart
@@ -13,5 +14,5 @@ python-jose[cryptography]
 # 处理密码哈希，使用Bcrypt算法；
 passlib[bcrypt]
 
-# 模板引擎，（默认不安装）
-# jinja2
+# 模板引擎
+jinja2
